// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`willChange renders 0 1`] = `
Array [
  .c0 {
  will-change: 0;
}

<div
    className="c0"
  />,
  .c0 {
  will-change: 0;
}

<div
    className="c0"
  />,
  .c0 {
  will-change: 0;
}

<div
    className="c0"
  />,
  .c0 {
  will-change: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`willChange renders function 1`] = `
Array [
  .c0 {
  will-change: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  will-change: has;
}

<div
    className="c0"
  />,
  .c0 {
  will-change: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  will-change: has;
}

<div
    className="c0"
  />,
]
`;

exports[`willChange renders invalid theme path 1`] = `
Array [
  .c0 {
  will-change: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  will-change: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  will-change: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  will-change: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`willChange renders negative number 1`] = `
Array [
  .c0 {
  will-change: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  will-change: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  will-change: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  will-change: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`willChange renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  will-change: July;
}

@media screen and (min-width:November) {
  .c0 {
    will-change: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    will-change: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    will-change: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    will-change: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  will-change: July;
}

@media screen and (min-width:November) {
  .c0 {
    will-change: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    will-change: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    will-change: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    will-change: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  will-change: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    will-change: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    will-change: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    will-change: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    will-change: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  will-change: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    will-change: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    will-change: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    will-change: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    will-change: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`willChange renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    will-change: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    will-change: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    will-change: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    will-change: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    will-change: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    will-change: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    will-change: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    will-change: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    will-change: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    will-change: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    will-change: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    will-change: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    will-change: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    will-change: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    will-change: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    will-change: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`willChange renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  will-change: July;
}

@media May {
  .c0 {
    will-change: August;
  }
}

@media April {
  .c0 {
    will-change: September;
  }
}

@media January {
  .c0 {
    will-change: November;
  }
}

@media April {
  .c0 {
    will-change: August;
  }
}

@media June {
  .c0 {
    will-change: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  will-change: July;
}

@media May {
  .c0 {
    will-change: August;
  }
}

@media April {
  .c0 {
    will-change: September;
  }
}

@media January {
  .c0 {
    will-change: November;
  }
}

@media April {
  .c0 {
    will-change: August;
  }
}

@media June {
  .c0 {
    will-change: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  will-change: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    will-change: November;
  }
}

@media April {
  .c0 {
    will-change: January;
  }
}

@media January {
  .c0 {
    will-change: December;
  }
}

@media April {
  .c0 {
    will-change: April;
  }
}

@media June {
  .c0 {
    will-change: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  will-change: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    will-change: November;
  }
}

@media April {
  .c0 {
    will-change: January;
  }
}

@media January {
  .c0 {
    will-change: December;
  }
}

@media April {
  .c0 {
    will-change: April;
  }
}

@media June {
  .c0 {
    will-change: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`willChange renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    will-change: July;
  }
}

@media April {
  .c0 {
    will-change: August;
  }
}

@media January {
  .c0 {
    will-change: September;
  }
}

@media April {
  .c0 {
    will-change: November;
  }
}

@media June {
  .c0 {
    will-change: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    will-change: July;
  }
}

@media April {
  .c0 {
    will-change: August;
  }
}

@media January {
  .c0 {
    will-change: September;
  }
}

@media April {
  .c0 {
    will-change: November;
  }
}

@media June {
  .c0 {
    will-change: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    will-change: January;
  }
}

@media April {
  .c0 {
    will-change: December;
  }
}

@media January {
  .c0 {
    will-change: April;
  }
}

@media April {
  .c0 {
    will-change: May;
  }
}

@media June {
  .c0 {
    will-change: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    will-change: January;
  }
}

@media April {
  .c0 {
    will-change: December;
  }
}

@media January {
  .c0 {
    will-change: April;
  }
}

@media April {
  .c0 {
    will-change: May;
  }
}

@media June {
  .c0 {
    will-change: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`willChange renders postitive number 1`] = `
Array [
  .c0 {
  will-change: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  will-change: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  will-change: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  will-change: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`willChange renders string 1`] = `
Array [
  .c0 {
  will-change: July;
}

<div
    className="c0"
  />,
  .c0 {
  will-change: July;
}

<div
    className="c0"
  />,
  .c0 {
  will-change: June;
}

<div
    className="c0"
  />,
  .c0 {
  will-change: June;
}

<div
    className="c0"
  />,
]
`;

exports[`willChange renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`willChange renders valid theme path 1`] = `
Array [
  .c0 {
  will-change: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  will-change: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  will-change: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  will-change: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
